[package]
name = "ShoutWars-Server-Rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
futures-util = "0.3.30"
parking_lot = "0.12.3"
rand = "0.8.5"
rand_mt = "4.2.2"
rmp-serde = "1.3.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.10.0", features = ["v7"] }
